--- a/README.org
+++ b/README.org
@@ -13,8 +13,8 @@ This is an attempt at being able to compile the KDE apps on with ~nix-darwin~.
   - [ ] Ark
   - [ ] Plasma System Monitor
   - [ ] Krita
-  - [ ] Firelight
-  - [ ] KColorChooser
+  - [ ] Filelight
+  - [X] KColorChooser
   - [ ] More to be added to the list...
 
 "Working" can mean a lot of things. Some of these may just segfault or have weird colors.
