--- a/README.org
+++ b/README.org
@@ -15,6 +15,7 @@ This is an attempt at being able to compile the KDE apps on with ~nix-darwin~.
   - [ ] Krita
   - [ ] Filelight
   - [X] KColorChooser
+  - [ ] Falkon (build currently broken b/c pyside6 cannot find typesystem_pyfalkon.xml)
   - [ ] More to be added to the list...
 
 "Working" can mean a lot of things. Some of these may just segfault or have weird colors.
